Update EB 1 .css

--- a/EB 1 .css
+++ b/EB 1 .css
@@ -8,6 +8,13 @@ body {
     scrollbar: none;
 }
 
+
+body {
+    background: url("https://i.pinimg.com/1200x/9a/7f/b0/9a7fb09ce5e9ae80666e0e4b3be6a243.jpg") no-repeat center center fixed;
+    background-size: cover;
+}
+
+
 /* Header */
 header {
     text-align: center;
@@ -211,4 +218,5 @@ footer {
     transform: scale(1.1);
     filter: blur(0) brightness(1);
     box-shadow: 0 10px 25px #0004;
+
 }
