--- a/EB 1 .css
+++ b/EB 1 .css
@@ -6,7 +6,7 @@ body {
     color: white;
     font-family: "Poppins", Arial, sans-serif;
     scrollbar: none;
-    background: url("https://i.pinimg.com/1200x/9a/7f/b0/9a7fb09ce5e9ae80666e0e4b3be6a243.jpg") no-repeat center center fixed;
+    background: url("https://fr.pinterest.com/pin/3729612268691594/") no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -217,5 +217,6 @@ footer {
     box-shadow: 0 10px 25px #0004;
 
 }
+
 
 
