--- a/EB 1 .css
+++ b/EB 1 .css
@@ -6,7 +6,7 @@ body {
     color: white;
     font-family: "Poppins", Arial, sans-serif;
     scrollbar: none;
-    background: url("https://fr.pinterest.com/pin/3729612268691594/") no-repeat center center fixed;
+    background: url("https://i.pinimg.com/1200x/78/4c/b5/784cb54eac7b5846fe9bb05f2d3f6d0f.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -217,6 +217,7 @@ footer {
     box-shadow: 0 10px 25px #0004;
 
 }
+
 
 
 
